2008-05-13 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added support for p18f66j60, p18f66j65, p18f67j60, p18f86j60,
  p18f86j65, p18f87j60, p18f96j60, p18f96j65, and p18f97j60 (thanks Strobl
  Anton)
  * Added these and other added processors to processor list in documentation

2008-05-13 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Updated French manpage for -C option (patch by Alain Portal)

2008-05-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added CONFIG start/end addresses into processor table (bugs
  #1831152, #1852585)

2008-05-11 David Barnett <daviebdawg@gmail.com>
  * [gputils] Updated p18f65j50.inc

2008-05-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed special-case default for PIC18 access bit (bug #1534641)

2008-05-11 David Barnett <daviebdawg@gmail.com>
  * [gputils] Fixed missing #include for Windows builds

2008-05-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed segfault on call w/ no args in PIC18's (bug #1943484)

2008-05-08 David Barnett <daviebdawg@gmail.com>
  * [gpdasm] Improved gpdasm to allow non-word-aligned byte addresses (bug
  #1917597)

2008-05-07 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed failed assertion for unreasonably high code addresses (bug
  #1741065)

2008-05-06 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed symbol problems for labels on blank lines in data sections
  (bug #1943487)

2008-05-05 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Applied patch by Borut Razem to fix buffer overflow in LST file
  generation (bug #1922419)

2008-03-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added support for 18f2450, 18f4450, 18f2523

2008-03-21 David Barnett <daviebdawg@gmail.com>
  * Fixed bug with multiple spaces in #define directives (bug #1860881)

2007-11-22 David Barnett <daviebdawg@gmail.com>
  * Fix bug with #v substituted labels in code_pack sections

2007-11-21 David Barnett <daviebdawg@gmail.com>